<?xml version="1.0"?>
<package format="2">
  <name>d4zbot_gazebo</name>
  <version>0.0.0</version>
  <description>The d4zbot_gazebo package</description>

  <maintainer email="d4z@todo.todo">d4z</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  
  <exec_depend>d4zbot_description</exec_depend>
  <exec_depend>d4zbot_control</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>

  </export>
</package>
